--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="splash-container">
-  <h1 class="splash-title">budget app</h1>
+  <h1 class="splash-title">The budget app</h1>
 
   <div class="splash-login">
     <%= link_to "LOG IN", new_user_session_path, class: "splash-btn-login" %>
