--- a/app/assets/stylesheets/mains.scss
+++ b/app/assets/stylesheets/mains.scss
@@ -96,7 +96,7 @@ h2 {
   left: -100%;
   height: 100%;
   color: #434b54;
-  background-image: linear-gradient(to top right, #3778c2, #204269);
+  background-color: #3778c2;
 }
 
 .popup {
@@ -130,8 +130,7 @@ h2 {
 }
 
 .btn-signout {
-  background-color: #07c;
-  border-radius: 50px;
+  background-color: rgb(89, 92, 94);
   color: #fff;
   font-size: 16px;
   font-weight: bold;
@@ -153,7 +152,6 @@ h2 {
 .profile-image {
   background-color: #3778c2;
   color: white;
-  height: 7em;
   width: 5em;
   margin: 16px 0;
   border: 3px solid white;
@@ -209,6 +207,10 @@ h2 {
 .group-details p {
   font-weight: 500;
   font-size: large;
+}
+
+.group-details > p {
+  font-weight: 900;
 }
 
 .footer {
@@ -277,6 +279,10 @@ h2 {
   box-shadow: 0 3px 10px #0003;
   margin-bottom: 1em;
   padding: 0 1em;
+}
+
+.total-spending p:nth-child(2) {
+  font-weight: 900;
 }
 
 .group-name {
