--- a/app/assets/stylesheets/mains.scss
+++ b/app/assets/stylesheets/mains.scss
@@ -233,6 +233,8 @@ h2 {
   color: white;
   font-size: 24px;
   text-decoration: none;
+  margin-left: 0.5em;
+  font-weight: 900;
 }
 
 .btn-header {
@@ -411,4 +413,9 @@ h2 {
 
 #error_explanation h2 {
   font-size: 1em;
+}
+
+.icon_link {
+  border: none !important;
+  background: transparent !important;
 }
