add edit  categories

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,5 +1,5 @@
 <nav class="group-header">
-  <%= link_to "BACK", @group, class: "link-header" %>
+  <%= link_to "<", @group, class: "link-header" %>
   <p class="header-title">Editing group</p>
 </nav>
 
