--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,5 +1,5 @@
 <nav class="group-header">
-  <%= link_to "BACK", group_url(@group_id), class: "link-header" %>
+  <%= link_to "<", group_url(@group_id), class: "link-header" %>
   <p class="header-title">New transaction</p>
   <p></p>
 </nav>
