--- a/app/assets/stylesheets/mains.scss
+++ b/app/assets/stylesheets/mains.scss
@@ -295,7 +295,7 @@ h2 {
 }
 
 .group-date {
-  color: #434b54;
+  color: gray;
   font-size: x-small;
   margin-top: -0.5em;
 }
@@ -317,13 +317,12 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   gap: 0;
-  margin: 2em 5em 0 5em;
   background-color: #fff;
   box-shadow: 5px 0 15px gainsboro;
-  border-radius: 0.5em;
   height: 100%;
+  padding-left: 1em;
 }
 
 .payment-row p {
@@ -418,4 +417,13 @@ h2 {
 .icon_link {
   border: none !important;
   background: transparent !important;
+}
+
+.payments-item > p {
+  color: black;
+  font-weight: 900;
+}
+
+.payment-info * {
+  color: gray;
 }
