--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -1,4 +1,4 @@
 <nav class="group-header">
-  <%= link_to "BACK", group_path(@group), class: "link-header" %> 
+  <%= link_to "<", group_path(@group), class: "link-header" %> 
 </nav>
 <%= render @payment %>
