--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -48,8 +48,8 @@
       <% end %>
     </div>
     <div class="footer">
-     <div>
-       <%= link_to "ADD CATEGORY", new_group_path, class: "btn-bottom" %>
+     <div class="btn-bottom">
+       <%= link_to "ADD CATEGORY", new_group_path %>
      </div>
     </div>
   </div>
